# Data_summarization

./: app.py  create_data.py  hehe.py  pyproject.toml  real_synth_analyzer.py  req.txt
data/: real_data.csv  synthetic_data.csv
output/: real_data.csv  synthetic_data.csv
res/: evaluation_metrics_log.csv
