[project]
name = "working"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash-bootstrap-components>=2.0.3",
    "dash>=3.0.4",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.7.0",
]
